--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --coverage",
-    "test:watch": "jest --coverage --watchAll",
+    "test:watch-coverage": "jest coverage --watchAll",
+    "test:watch": "jest --watchAll",
     "start": "nodemon",
     "docs": "typedoc --out documentation src --exclude 'src/*.test.ts' --exclude 'src/**/*.test.ts'"
   },
